--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "axios": "^1.7.7",
+    "base64-js": "^1.5.1",
     "iconv-lite": "^0.6.3",
+    "utf8": "^3.0.0",
     "util": "^0.12.5",
     "zlib": "^1.0.5"
   }
